--- a/app/views/profiles/edit.html.haml
+++ b/app/views/profiles/edit.html.haml
@@ -1,12 +1,14 @@
 %p This is the edit profile page
 
-/ - @repos.each do |repo|
-/   = repo.name
-
-/   = button_to "#{repo.profile_visibility}", { action: "update_visibility", id: repo.id }, remote: true, form: { "data-type" => "json" }, form_class: "repo-visibility repo-#{repo.id}"
-
 - @repos.each do |repo|
   = repo.name
-  = form_for repo, remote: true, html: { class: "repo_visibility" } do |f|
-    = f.hidden_field :profile_visibility
-    = f.submit
+
+  = simple_form_for repo, remote: true, format: :json, html: { class: "repo-visibility" } do |f|
+    = f.input :profile_visibility, as: :boolean, checked_value: true, unchecked_value: false, input_html: { class: "repo-visibility-toggle" }
+  / = simple_form_for repo, remote: true, format: :json,
+  /   html: { class: "repo_visibility" } do |f|
+  /   = f.hidden_field :profile_visibility,
+  /     value: (repo.profile_visibility ? 'f' : 't')
+  /   = f.submit repo.profile_visibility ? "Visible" : "Hidden"
+
+= link_to "Go to profile page", profile_path(current_user.username)
