--- a/app/views/profiles/edit.html.haml
+++ b/app/views/profiles/edit.html.haml
@@ -3,9 +3,8 @@
   Thanks for signing up for GitCard! Please click on the checkboxes next to the
   repos you want to display on your profile page.
 - @repos.each do |repo|
-  = repo.name
-
   = simple_form_for repo, remote: true, format: :json, html: { class: "repo-visibility" } do |f|
+    = f.label repo.name
     = f.input :profile_visibility, label: "", as: :boolean, checked_value: true, unchecked_value: false, input_html: { class: "repo-visibility-toggle", "data-repo-name" => "#{repo.name}" }
   / = simple_form_for repo, remote: true, format: :json,
   /   html: { class: "repo_visibility" } do |f|
