--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -1,3 +1,9 @@
 %p 
   This is the profile page for
   = @user.username
+
+.profile-repos
+  %ul
+    - @user.repos.each do |repo|
+      %li
+        %a{href: "#{repo.html_url}"}= repo.name 
