--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -4,6 +4,13 @@
 
 .profile-repos
   %ul
-    - @user.repos.each do |repo|
+    - @repos.each do |repo|
       %li
         %a{href: "#{repo.html_url}"}= repo.name 
+.profile-languages
+  %ul
+    - @languages_bytes.each do |language, quantity|
+      %li= language + " | " + quantity.to_s 
+  %ul
+    - @languages_percents.each do |language, percent|
+      %li= language + " | " + percent.to_s
