--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -1,19 +1,23 @@
-%p 
-  This is the profile page for
-  = @user.username
+.row.text-center
+  %p 
+    This is the profile page for
+    = @user.username
 
-= image_tag @user.avatar_url, alt: "#{@user.username}",
-  class: "profile-page-portrait"
-
-.profile-repos
-  %ul
-    - @repos.each do |repo|
-      %li
-        %a{href: "#{repo.html_url}"}= repo.name 
-.profile-languages
-  %ul
-    - @languages_bytes.each do |language, quantity|
-      %li= language + " | " + quantity.to_s 
-  %ul
-    - @languages_percents.each do |language, percent|
-      %li= language + " | " + percent.to_s
+  = image_tag @user.avatar_url, alt: "#{@user.username}",
+    class: "profile-page-portrait"
+.row
+  .col-md-6
+    .profile-repos
+      %ul
+        - @repos.each do |repo|
+          %li
+            %a{href: "#{repo.html_url}"}= repo.name
+  .col-md-6 
+    .profile-languages
+      %ul
+        - @languages_bytes.each do |language, quantity|
+          %li= language + " | " + quantity.to_s 
+      %ul
+        - @languages_percents.each do |language, percent|
+          %li= language + " | " + percent.to_s + "%"
+    %canvas#languages-doughnut{ width: 300 }
