--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -14,10 +14,8 @@
             %a{href: "#{repo.html_url}"}= repo.name
   .col-md-6 
     .profile-languages
-      %ul
-        - @languages_bytes.each do |language, quantity|
-          %li= language + " | " + quantity.to_s 
-      %ul
-        - @languages_percents.each do |language, percent|
-          %li= language + " | " + percent.to_s + "%"
-    %canvas#languages-doughnut{ width: 300 }
+      .profile-languages-percents
+        %canvas#languages-doughnut
+        #languages-doughnut-legend
+:javascript
+  buildLanguagesDoughnut('#{ j @languages_percents.to_json }');
