chart on profile page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,8 @@
 .container-wrapper {
-  max-width:1200px;
+  max-width:400px;
   margin:0 auto;
-  padding:5px;
+}
+.profile-header {
+  background: white;
+  padding:15px;
 }
