--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,8 +1,14 @@
 .container-wrapper {
-  max-width:400px;
+  max-width:960px;
   margin:0 auto;
 }
 .profile-header {
   background: white;
   padding:35px;
+}
+.profile-page-portrait {
+  border:4px solid white;
+}
+.gc-header {
+
 }
