--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -5,24 +5,23 @@
   box-shadow:         0px 6px 4px 0px rgba(50, 50, 50, 0.75);
 }
 body {
-  font-family: "Lato", sans-serif;
+  // font-family: "Lato", sans-serif;
 }
 .container-wrapper {
-  max-width:960px;
+  max-width:1320px;
   margin:0 auto;
 }
 .profile-header {
   background: $brand-info;
-  color:#f8f8f8;
+  color:#fff;
   display:table;
   padding:15px;
+  width:100%;
 }
 .profile-page-portrait {
   border:4px solid white;
 }
 .profile-stats-summary {
-  border-top-left-radius: 0px;
-  border-top-right-radius: 0px;
   padding: 0px 0px 25px 20px;
   h3 {
     border-bottom:1px solid #e3e3e3;
@@ -44,10 +43,15 @@ body {
   height:120px;
   width:120px;
 }
-.well {
+.custom-well {
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
   background-color: #f7f7f9;
 }
 .section-header {
   color: #e3e3e3;
+}
+#languages-doughnut {
+  margin-left:-20px;
 }
 
