links to gh repos

--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -13,16 +13,20 @@
     .row
       .col-md-12
         .profile-stats-summary.well.custom-well
-          %h3 
-            Githubber since
-            %strong= @user.gh_account_created
           %h3
+            = fa_icon "github"
+            Githubber since
+            %strong= Time.parse(@user.gh_account_created).strftime("%m-%Y")
+          %h3
+            = fa_icon "file-code-o"
             Total Repos: 
             %strong= @user.repos.count
           %h3
+            = fa_icon "language"
             Languages Used: 
             %strong= @user.languages.distinct.count
           %h3
+            = fa_icon "tasks"
             Commits This Year: 
             %strong= @velocity.sum_for_year
     .row
@@ -43,35 +47,24 @@
         .well.custom-well
           - @repos.each do |repo|
             .panel.panel-default
-              %a{href: "#{repo.html_url}"}
-                .panel-heading= repo.name
-                - if !repo.description.nil? || !repo.description == ""
-                  .panel-body= repo.description
-              .panel-footer.panel-info= repo.languages
+              %a{ href: repo.html_url }
+                .panel-heading.repo-name-link 
+                  %h1.panel-title
+                    = repo.name
+                    .pull-right= fa_icon "chevron-right"
+              - if !repo.description.nil? || !repo.description == ""
+                .panel-body= repo.description
+              .panel-footer.panel-info
+                %ul.list-inline 
+                  %li
+                    %strong Languages Used:
+                  - repo.languages.each do |lang|
+                    %li= lang.name
     .row
       .col-md-8.col-md-offset-2
         %h1.section-header Commit Stats
         .well.custom-well
-
-  / %canvas#languages-doughnut
-
-  / #languages-doughnut-legend
-
-  / .row
-  /   .col-md-12 
-  /   .profile-languages
-  /     .profile-languages-percents
-  /       %canvas#languages-doughnut
-  /       #languages-doughnut-legend
-  / .row
-  /   .col-md-12
-  /     .profile-repos
-  /       - @repos.each do |repo|
-  /         .panel.panel-default
-  /           %a{href: "#{repo.html_url}"}
-  /             .panel-heading= repo.name
-  /             - if !repo.description.nil? || !repo.description == ""
-  /               .panel-body= repo.description
-
 :javascript
-  buildLanguagesDoughnut('#{ j @languages_percents.to_json }');
+  $(function(){
+    buildLanguagesDoughnut('#{ j @languages_percents.to_json }');
+  });
