--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -4,8 +4,12 @@
   -moz-box-shadow:    0px 6px 4px 0px rgba(50, 50, 50, 0.75);
   box-shadow:         0px 6px 4px 0px rgba(50, 50, 50, 0.75);
 }
+
 body {
   // font-family: "Lato", sans-serif;
+}
+a:hover {
+  text-decoration: none;
 }
 .container-wrapper {
   max-width:1320px;
@@ -47,11 +51,27 @@ body {
   border-top-left-radius: 0px;
   border-top-right-radius: 0px;
   background-color: #f7f7f9;
+  // background-color: white;
 }
 .section-header {
   color: #e3e3e3;
 }
 #languages-doughnut {
   margin-left:-20px;
+  margin-bottom:20px;
 }
+.panel-footer ul {
+  margin-bottom: 0px;
+}
+.repo-name-link:hover {
+  background-color: $brand-info;
+  color: white;
+  cursor: pointer;
+}
+.repo-name-link {
+  background-color: whitesmoke;
+  border-bottom: 1px solid #dddddd;
+}// .panel-footer ul li {
+//   border-right:2px solid black;
+// }
 
