--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -31,7 +31,7 @@
             %strong= @velocity.sum_for_year
     .row
       .col-md-12
-        .profile-header Language Stats
+        .profile-header.profile-header-lg Language Stats
     .row
       .col-md-12
         .well.custom-well
@@ -40,13 +40,12 @@
   .col-md-6
     .row
       .col-md-12
-        .profile-header
-          Featured Repos
+        .profile-header.profile-header-lg Featured Repos
     .row
       .col-md-12
         .well.custom-well
           - @repos.each do |repo|
-            .panel.panel-default
+            .panel.panel-default.custom-panel
               %a{ href: repo.html_url }
                 .panel-heading.repo-name-link 
                   %h1.panel-title
@@ -60,10 +59,10 @@
                     %strong Languages Used:
                   - repo.languages.each do |lang|
                     %li= lang.name
-    .row
-      .col-md-8.col-md-offset-2
-        %h1.section-header Commit Stats
-        .well.custom-well
+    / .row
+    /   .col-md-8.col-md-offset-2
+    /     %h1.section-header Commit Stats
+    /     .well.custom-well
 :javascript
   $(function(){
     buildLanguagesDoughnut('#{ j @languages_percents.to_json }');
