--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -4,18 +4,25 @@
   -moz-box-shadow:    0px 4px 0px 0px rgba(50, 50, 50, 0.25);
   box-shadow:         0px 4px 0px 0px rgba(50, 50, 50, 0.25);
 }
+@mixin transition($transition-property, $transition-time, $method) {
+    -webkit-transition: $transition-property $transition-time $method;
+    -moz-transition: $transition-property $transition-time $method;
+    -ms-transition: $transition-property $transition-time $method;
+    -o-transition: $transition-property $transition-time $method;
+    transition: $transition-property $transition-time $method;
+}
 
 body {
-  // font-family: "Lato", sans-serif;
+  @include transition(all, 0.5s, ease);
+  font-family: "Open Sans", sans-serif;
 }
 a:hover {
   text-decoration: none;
 }
-.container-wrapper {
-  max-width:1320px;
-  margin:0 auto;
+#hidden-wrapper {
+  display:none;
 }
-.profile-header {
+.card-header {
   @include box-shadow-basic;
   background: $brand-info;
   color:#fff;
@@ -23,9 +30,10 @@ a:hover {
   padding:15px;
   width:100%;
 }
-.profile-header-lg {
+.card-header-lg {
   font-size:140%;
 }
+
 .profile-page-portrait {
   border:4px solid white;
 }
@@ -37,11 +45,12 @@ a:hover {
   }
 }
 
-.profile-portrait-wrapper {
+.card-portrait {
   display:table-cell;
   vertical-align: middle;
 }
-.profile-header-info {
+
+.card-header-info {
   display:table-cell;
   padding:0 0 0 10px;
 }
@@ -51,11 +60,24 @@ a:hover {
   height:120px;
   width:120px;
 }
+.fake-portrait {
+  background:$brand-primary;
+  border-radius:50%;
+  border:4px solid white;
+  display:table-cell;
+  height:120px;
+  min-width:120px; 
+  vertical-align: middle;
+  text-align: center;
+
+}
+.card-landing-page {
+}
 .custom-well {
   @include box-shadow-basic;
   border-top-left-radius: 0px;
   border-top-right-radius: 0px;
-  background-color: #ECF0F1;
+  background-color: #F2F1EF;
   // background-color: white;
   .panel-heading, .panel-footer {
     background-color: white;
@@ -74,17 +96,72 @@ a:hover {
 }
 .custom-panel {
   box-shadow: 0 2px 0px rgba(0, 0, 0, 0.05);
-  border:4px solid #ddd;
+  border:3px solid #ddd;
 }
 .repo-name-link:hover {
   background-color: $brand-info;
+  border-color: $brand-info;
   color: white;
   cursor: pointer;
 }
 .repo-name-link {
   background-color: whitesmoke;
-  border-bottom: 4px solid #dddddd;
+  border-bottom: 3px solid #dddddd;
 }// .panel-footer ul li {
 //   border-right:2px solid black;
 // }
-
+.boxed {
+  @include box-shadow-basic;
+}
+.btn {
+  border:0px solid transparent;
+}
+.home-wrapper {
+  margin-top:0px;
+}
+.nav-btn {
+  position: absolute;
+  left:0;
+  top:0;
+  padding:10px 20px 10px 20px;
+  color: $brand-primary;
+  z-index: 1000;
+}
+.nav-wrap {
+  @include transition(all, 0.5s, ease);
+  position: fixed;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 250px;
+  background: #F2F1EF;
+  padding: 10px 0px 0px 0px;
+  margin-left: -250px;
+  border-right: 1px solid #e3e3e3;
+  ul {
+    padding-left:20px;
+    list-style: none;
+  }
+}
+.body-left {
+  margin-left: 250px;
+  width: 100%;
+  overflow: hidden;
+}
+.open {
+  margin-left: 0px;
+}
+.trigger {
+  cursor: pointer;
+}
+.icon-shadow {
+  @include box-shadow-basic;
+}
+.menu-frame {
+  position: relative;
+}
+@media (min-width: 1200px) {
+  .container {
+    width: 1440px;
+  }
+}
