remove hover animation from settings wheel

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -135,8 +135,7 @@ a:hover {
   z-index: 1000;
 }
 .nav-btn:hover {
-  @include transition(all, 1s, ease);
-  @include transform(rotate(180deg));
+  color: $link-hover-color;
 }
 .nav-wrap {
   @include transition(all, 0.5s, ease);
@@ -154,6 +153,7 @@ a:hover {
     list-style: none;
     li {
       border-bottom:1px solid #e3e3e3;
+      margin-bottom:20px;
       padding-bottom:4px;
     }
   }
@@ -175,6 +175,86 @@ a:hover {
 .menu-frame {
   position: relative;
 }
+
+.label-switch {
+  $switch-width: 52px;
+  $switch-padding: 2px;
+  $switch-height: 32px;
+  $switch-radius: $switch-height;
+  $knob-height: $switch-height - ($switch-padding * 2);
+  $knob-width: $knob-height;
+  $knob-radius: $switch-height - ($switch-padding * 2);
+
+  align-self: center;
+  border-radius: $switch-radius;
+  cursor: pointer;
+  display: inline-block;
+  height: $switch-height;
+  position: relative;
+  vertical-align: middle;
+  width: $switch-width;
+  @include box-sizing(border-box);
+
+  input[type="checkbox"] {
+    display: none;
+
+  + .checkbox {
+    background: #e5e5e5;
+    border: none;
+    border-radius: $switch-radius;
+    cursor: pointer;
+    height: $switch-height;
+    margin: 0;
+    padding: 0;
+    position: relative;
+    width: $switch-width;
+    z-index: 0;
+    @include box-sizing(border-box);
+    @include transition(all 0.3s ease);
+
+    &:before {
+      background: white;
+      border-radius: $switch-radius;
+      content: ' ';
+      height: $knob-radius;
+      width: $switch-width - ($switch-padding * 2);
+      z-index: 1;
+      @include box-sizing(border-box);
+      @include position(absolute, 2px 0 0 2px);
+      @include transition(all 0.3s ease);
+      @include transform(scale(1));
+    }
+
+    &:after {
+      background: white;
+      border-radius: $knob-radius;
+      content: ' ';
+      height: $knob-height;
+      width: $knob-width;
+      z-index: 2;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.4);
+      @include position(absolute, 2px 0 0 2px);
+      @include transition(all 0.3s ease);
+    }
+  }
+
+  &:checked {
+    + .checkbox {
+      background: $blue;
+        
+        &:before {
+          @include transform(scale(0));
+        }
+
+        &:after {
+          left: $switch-width - $knob-width - ($switch-padding);
+        }
+      }
+    }
+  }
+}
+
+
 @media (min-width: 1200px) {
   .container {
     width: 1440px;
