--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,4 +1,5 @@
 @import "bootstrap/variables";
+
 @mixin box-shadow-basic(){
   -webkit-box-shadow: 0px 4px 0px 0px rgba(50, 50, 50, 0.25);
   -moz-box-shadow:    0px 4px 0px 0px rgba(50, 50, 50, 0.25);
@@ -155,8 +156,11 @@ a:hover {
 .home-wrapper {
   margin-top:0px;
 }
+.menu-frame {
+  position: fixed;
+}
 .nav-btn {
-  position: absolute;
+  position: fixed;
   left:0;
   top:0;
   padding:10px 20px 10px 20px;
@@ -201,9 +205,10 @@ a:hover {
 .icon-shadow {
   @include box-shadow-basic;
 }
-.menu-frame {
-  position: relative;
+.refresh-profile-btn {
+  
 }
+
 
 [type="checkbox"] {
   width: 30px;
