--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,7 +3,7 @@
   %head
     %meta{charset: "utf-8"}
     %meta{content: "width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no", name: "viewport"}
-    = yield(:title)
+    %title= "GitCard | " + yield(:title)
     = stylesheet_link_tag :application, :media => 'all'
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800,600' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
@@ -29,7 +29,7 @@
               = fa_icon "refresh" 
               Refresh Profile
           %li
-            = link_to edit_profile_path(current_user.username) do
+            = link_to edit_profile_path(current_user.username), class: "edit-profile-btn" do
               = fa_icon "th-list"
               Edit Profile
     .container
